adding behavior on category